--- a/16.Filter.Product/details.html
+++ b/16.Filter.Product/details.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./details.css">
+    <link rel="stylesheet" href="./details.css" />
     <style>
-        .details{
-            width: 30%;
-        }
-        .details img {
-            width: 100%;
-        }
+      .details {
+        width: 30%;
+      }
+      .details img {
+        width: 100%;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-    
-
+  <body>
     <section>
-        <div class="details">
-
-        </div>
-        <!-- <img src="" alt="">
+      <div class="details"></div>
+      <!-- <img src="" alt="">
         <h3>Title</h3>
         <h3>Description</h3>
         <h3>Price:100$</h3>
         <button class="">details</button>
         <button>go back</button> -->
-
     </section>
     <script src="./details.js"></script>
-</body>
+  </body>
 </html>
