--- a/17.Blog.Practice/index.html
+++ b/17.Blog.Practice/index.html
@@ -15,13 +15,13 @@
           <input
             type="text"
             name="search blog here"
-            id=""
+            id="search"
             placeholder="search blog here"
           />
-          <daiv class="link">
+          <div class="link">
             <a href="">Home</a>
-            <a href="">New blog</a>
-          </daiv>
+            <a href="./blog.html">New blog</a>
+          </div>
         </div>
       </div>
     </header>
@@ -34,12 +34,13 @@
             <p>written by Lorem</p>
             <div class="btn">
               <button class="delete">delete</button>
-              <button class="edit">edit</button>
+              <a class="edit">edit</a>
             </div>
           </div> -->
         </div>
       </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js" integrity="sha512-b94Z6431JyXY14iSXwgzeZurHHRNkLt9d6bAHt7BZT38eqV+GyngIi/tVye4jBKPYQ2lBdRs0glww4fmpuLRwA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./app.js"></script>
   </body>
 </html>
