--- a/admin.html
+++ b/admin.html
@@ -18,15 +18,17 @@
       referrerpolicy="no-referrer"
     />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/admin.css" />
+    <link rel="stylesheet" href="./23.flowers.practice/assets/sassAdmin/main.css" />
   </head>
   <style>
+    
+    
     table,
     td,
     th {
       border: 1px solid;
       border-collapse: collapse;
-      padding: 20px 30px;
+      padding: 40px 90px;
     }
     .table {
      padding: 50px 0px;
@@ -39,17 +41,17 @@
 
     thead {
       background-color: rgb(55, 173, 134);
-      padding: 80px 20px;
+      padding: 20px 10px;
     }
   </style>
   <body>
-    <header>
-      <div class="header">
+    <header id="admin">
+      <div class="admin">
         <h2>Menu</h2>
 
         <button
           type="button"
-          class="btn btn-primary"
+          class="btn btn-primary submit"
           data-bs-toggle="modal"
           data-bs-target="#staticBackdrop"
         >
@@ -82,13 +84,13 @@
             <div class="modal-body">
               <form action="">
                 <label for="">id</label> <br />
-                <input class="" type="text" placeholder="enter" /> <br /><br />
+                <input class="id" type="text" placeholder="enter" /> <br /><br />
 
                 <label for="">Name</label><br />
-                <input type="text" placeholder="enter" /><br /><br />
+                <input class="title" type="text" placeholder="enter" /><br /><br />
 
                 <label for="">Price</label><br />
-                <input type="text" placeholder="enter" /> <br /><br />
+                <input type="price" placeholder="enter" /> <br /><br />
                 <button
                   type="submit"
                   class="btn btn-primary"
@@ -147,6 +149,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="./23.flowers.practice/assets/js/admin.js"></script>
   </body>
 </html>
